--- a/index.html
+++ b/index.html
@@ -43,10 +43,27 @@
     <div class="frequente">
         <h1>Perguntas Frequentes</h1>
         <form id="frequenteForm" enctype="multipart/form-data"></form>
-        <div class="cancel">
-            <button id="cancel">Argumentação de possível cancelamento</button>
+        <div class="btncancel">
+            <button id="btncancel">Argumentação de possível cancelamento</button>
         </div>
     </div> 
+
+    <div class="cancel">
+        <h1>Argumentação de possível cancelamento</h1>
+        <div contenteditable="true" spellcheck="false">
+            <form id="frequenteForm" enctype="multipart/form-data"></form>
+            <p>Abertura: <span style="color: red;">Dr. Gabriel</span>, sinto muito pelo que está passando. Neste primeiro momento, nossos termos de uso não temos a opção de trancar. A sua compra não está mais dentro do período de 7 dias de garantia. Diante disso, me coloco à disposição para ajudá-<span style="color: red;">lo</span> a não desistir da sua prova neste ano, seja com um guia de estudos ou com suporte sobre a plataforma, caso esteja enfrentando alguma dificuldade. Nosso curso não comtempla assinatura, no ato da compra, você recebe de formato de aderência, ou seja o curso por completo em um determinado período com a opção de ser pago a vista, ou parcelado.</p>
+            <p>Argumentação 1: O cancelamento pode ser realizado dentro de 7 dias da garantia, conforme o termo de uso <a href="https://www.grupomedcof.com.br/termos-de-uso/">https://www.grupomedcof.com.br/termos-de-uso/</a>. Mas entendemos a situação e o motivo da desistência e estamos sempre disponíveis para ajudar a melhorar a sua jornada de estudos! <br>Hoje como podemos te auxiliar para melhorar a sua experiência MedCof?<br><br>
+                Argumentação 2: Analisei no seu histórico de estudos e hoje você acabou aproveitando bem pouco dos nossos recursos MedCof. Possuímos o modelo AQFM que comtempla aula, questão, FlashCard e material de apoio. Ainda tem tempo, a sua assinatura é valida por <span style="color: red;"> X </span> período.</p>
+            <p>Argumentação de retorno<br>
+                Solicitação de retorno: Olá, <span style="color: red;">Dr. Gabriel</span>! Podemos continuar o atendimento?
+            </p>
+            <p>Encerramento do chat<br>
+                Fechamento: Olá, <span style="color: red;">Dr. Gabriel</span>. Tudo bem? Faz um tempinho que não conversamos. Vou encerrar nosso chat por falta de interação, mas caso tenha alguma dúvida, pode nos acionar novamente! Tenha <span style="color: red;">uma</span> ótima <span style="color: red;">tarde</span>.<br>
+                <a href="https://www.grupomedcof.com.br/termos-de-uso/">https://www.grupomedcof.com.br/termos-de-uso/</a>
+            </p>
+        </div>
+    </div>
     
     <div class="container">
         <h1>Mensagens Automatizadas</h1>
@@ -113,7 +130,7 @@
     </div>
 
         <!-- Robô Flutuante -->
-    <div class="floating-robot">
+    <div class="floating">
         <img src="src/cofbot.gif" alt="Robô Flutuante">
     </div>
 </body>
