--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
     
         <div id="tableContainer"></div>
         <button id="generateMessagesButton" type="button" onclick="generateMessages()">Gerar Mensagens</button>
-        <div id="output"></div>    
+        <div contenteditable="true" spellcheck="false">
+        <div id="output"></div> 
+        <p>⚠️Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</p>   
+        </div>
     </div>
 </body>
         <!-- Formulário de Login -->
