--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" type="image/png" href="src/favicon.png"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script defer src="script.js"> </script>
+    <script defer src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -32,6 +32,10 @@
     
         <div class="button-container">
             <button id="btnAutomatedMessages">Mensagens Automatizadas</button>
+        </div>
+
+        <div class="button-container">
+            <button id="btnJantares">Jantares</button>
         </div>
     </div>
         <!-- Campo de Mensagens Personalizadas, inicialmente oculto -->
@@ -80,9 +84,31 @@
     
         <div id="tableContainer"></div>
         <button id="generateMessagesButton" type="button" onclick="generateMessages()">Gerar Mensagens</button>
+        <div contenteditable="true" spellcheck="false"></div>
+    </div>
+
+    <div class="jantares">
+        <h1>Jantares</h1>
+        <form id="frequenteForm" enctype="multipart/form-data"></form>
+        <div class="btncapacidade">
+            <button id="btncapacidade">Capacidade</button>
+        </div>
+    </div>
+
+    <div class="capacidade">
+        <h1>Capacidade dos jantares atingidas até o momento</h1>
         <div contenteditable="true" spellcheck="false">
-        <div id="output"></div> 
-        <p>⚠️Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</p>   
+            <form id="frequenteForm" enctype="multipart/form-data"></form>
+            <p>Abertura: <span style="color: red;">Dr. Gabriel</span>, sinto muito pelo que está passando. Neste primeiro momento, nossos termos de uso não temos a opção de trancar. A sua compra não está mais dentro do período de 7 dias de garantia. Diante disso, me coloco à disposição para ajudá-<span style="color: red;">lo</span> a não desistir da sua prova neste ano, seja com um guia de estudos ou com suporte sobre a plataforma, caso esteja enfrentando alguma dificuldade. Nosso curso não comtempla assinatura, no ato da compra, você recebe de formato de aderência, ou seja o curso por completo em um determinado período com a opção de ser pago a vista, ou parcelado.</p>
+            <p>Argumentação 1: O cancelamento pode ser realizado dentro de 7 dias da garantia, conforme o termo de uso <a href="https://www.grupomedcof.com.br/termos-de-uso/">https://www.grupomedcof.com.br/termos-de-uso/</a>. Mas entendemos a situação e o motivo da desistência e estamos sempre disponíveis para ajudar a melhorar a sua jornada de estudos! <br>Hoje como podemos te auxiliar para melhorar a sua experiência MedCof?<br><br>
+                Argumentação 2: Analisei no seu histórico de estudos e hoje você acabou aproveitando bem pouco dos nossos recursos MedCof. Possuímos o modelo AQFM que comtempla aula, questão, FlashCard e material de apoio. Ainda tem tempo, a sua assinatura é valida por <span style="color: red;"> X </span> período.</p>
+            <p>Argumentação de retorno<br>
+                Solicitação de retorno: Olá, <span style="color: red;">Dr. Gabriel</span>! Podemos continuar o atendimento?
+            </p>
+            <p>Encerramento do chat<br>
+                Fechamento: Olá, <span style="color: red;">Dr. Gabriel</span>. Tudo bem? Faz um tempinho que não conversamos. Vou encerrar nosso chat por falta de interação, mas caso tenha alguma dúvida, pode nos acionar novamente! Tenha <span style="color: red;">uma</span> ótima <span style="color: red;">tarde</span>.<br>
+            </p>
+            <p><strong>⚠️Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</strong></p>
         </div>
     </div>
 </body>
@@ -132,6 +158,10 @@
         <p>Este script de mensagens automáticas foi projetado para otimizar a integração de dados com textos personalizados para o envio eficiente de mensagens. Ao elaborar sua mensagem, insira entre chaves `{}` os nomes das colunas de dados que deseja utilizar da planilha, e o sistema fará a substituição automática pelos valores correspondentes</p>
     </div>
 
+    <div class="avisosjantares">
+        <h2>Avisos</h2>
+        <p>O campo de jantares tem como objetivo integrar o setor de novos negócios, buscando automatizar tarefas e melhorar a eficiência das operações. A ideia é aplicar soluções inovadoras para simplificar processos, permitindo que uma equipe se concentre em áreas estratégicas, como a criação de novas oportunidades e otimização da experiência dos participantes</p>
+    </div>
         <!-- Robô Flutuante -->
     <div class="floating">
         <img src="src/cofbot.gif" alt="Robô Flutuante">
