--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/global/global.css">
     <link rel="shortcut icon" type="image/png" href="src/favicon.png"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script defer src="assets/js/script.js"></script>
+    <script defer src="assets/js/global/global.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -54,9 +54,9 @@
                 <label for="textoBase">Texto Base:</label>
                 <textarea id="textoBase" name="textoBase" rows="6" placeholder="Digite o texto base aqui..."></textarea>           
                 <label for="fileInput">Carregar arquivo .xlsx</label>
-                <input type="file" id="fileInput" accept=".xlsx, .xls">  
+                <input type="file" id="fileInput" accept=".xlsx, .xls">
                 <div id="sheetSelector"></div>
-                <div id="tableContainer"></div>          
+                <div id="tableContainer"></div>            
                 <div class="button-group">
                     <button type="button" id="selectAllButton" class="action-button">✔ Selecionar Todos</button>
                     <button type="button" id="deselectAllButton" class="action-button">✔ Selecionar Nenhum</button>
@@ -167,6 +167,7 @@
     <div class="floating">
         <img src="assets/src/global/cofbot.gif" alt="Robô Flutuante">
     </div>
+
 
 
 </body>
