--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medcof Scripts</title>
-    <link rel="stylesheet" href="assets/css/global/global.css">
-    <link rel="shortcut icon" type="image/png" href="src/favicon.png"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script defer src="assets/js/global/global.js"></script>
+    <link rel="stylesheet" href="../css/global/global.css">
+    <link rel="shortcut icon" type="image/png" href="../src/global/favicon.png"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
+
+    <script defer src="../js/global/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -16,7 +17,7 @@
     <!-- Cabeçalho -->
      <div>
         <header>
-            <img src="assets/src/global/logo.png" alt="Logo" class="logo" id="logo">
+            <img src="../src/global/logo.png" alt="Logo" class="logo" id="logo">
         </header>
      </div>
 
@@ -34,6 +35,7 @@
         <div class="button-container">
             <button id="btnJantares">Jantares</button></div>
         </div>
+        
         <!-- Campo de Mensagens Personalizadas, inicialmente oculto -->
         <div class="page">
             <h1>Bem-vindo ao MedCof Scripts</h1>
@@ -95,7 +97,6 @@
         </div>
     </div>
 
-
     <div class="capacidade">
         <h1>Capacidade dos jantares atingidas até o momento</h1>
         <div contenteditable="true" spellcheck="false">
@@ -155,7 +156,7 @@
     </div>
         <!-- Robô Flutuante -->
     <div class="floating">
-        <img src="assets/src/global/cofbot.gif" alt="Robô Flutuante">
+        <img src="../src/global/cofbot.gif" alt="Robô Flutuante">
     </div>
 </body>
 </html>
