--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -93,7 +93,7 @@
             <p>Encerramento do chat<br>
                 Fechamento: Olá, <span style="color: red;">Dr. Gabriel</span>. Tudo bem? Faz um tempinho que não conversamos. Vou encerrar nosso chat por falta de interação, mas caso tenha alguma dúvida, pode nos acionar novamente! Tenha <span style="color: red;">uma</span> ótima <span style="color: red;">tarde</span>.<br>
             </p>
-            <p><strong>⚠️Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</strong></p>
+            <p><strong>Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</strong></p>
         </div>
     </div>
 
