--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medcof Scripts</title>
-    <link rel="stylesheet" href="../css/global/global.css">
-    <link rel="shortcut icon" type="image/png" href="../src/global/favicon.png"/>
+    <link rel="stylesheet" href="assets/css/global/global.css">
+    <link rel="shortcut icon" type="image/png" href="assets/src/global/favicon.png"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
 
-    <script defer src="../js/global/script.js"></script>
+    <script defer src="assets/js/global/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
@@ -17,7 +17,7 @@
     <!-- Cabeçalho -->
      <div>
         <header>
-            <img src="../src/global/logo.png" alt="Logo" class="logo" id="logo">
+            <img src="assets/src/global/logo.png" alt="Logo" class="logo" id="logo">
         </header>
      </div>
 
@@ -156,7 +156,7 @@
     </div>
         <!-- Robô Flutuante -->
     <div class="floating">
-        <img src="../src/global/cofbot.gif" alt="Robô Flutuante">
+        <img src="assets/src/global/cofbot.gif" alt="Robô Flutuante">
     </div>
 </body>
 </html>
