--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         
         <div class="button-container">
                 <button id="btnAutomatedMessages">Mensagens Automatizadas</button></div>
+        <div class="button-container">
+                <button id="btncadastro">Cadastramento de Questões</button></div>
     </div>
         
         <!-- Campo de Mensagens Personalizadas, inicialmente oculto -->
