--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
             <p><strong>Esta página é editável. Por favor, ajuste os textos destacados em vermelho conforme necessário para atendimento ao cliente.</strong></p>
         </div>
     </div>
+
+    <div class="cadastro">
+        <h1>Cadastramento de Questões</h1>
+        <form id="frequenteForm" enctype="multipart/form-data"></form>
+    </div>
         <!-- Formulário de Login -->
 
     <div class="avisospage">
@@ -131,6 +136,11 @@
     <div class="avisosmsg">
         <h2>Avisos</h2>
         <p>Este script de mensagens automáticas foi projetado para otimizar a integração de dados com textos personalizados para o envio eficiente de mensagens. Ao elaborar sua mensagem, insira entre chaves `{}` os nomes das colunas de dados que deseja utilizar da planilha, e o sistema fará a substituição automática pelos valores correspondentes</p>
+    </div>
+
+    <div class="avisoscadastro">
+        <h2>Avisos</h2>
+        <p>Este script tem como funcionalidade o cadastro rápido de questões, otimizando o processo e tornando-o mais eficiente</p>
     </div>
 
         <!-- Robô Flutuante -->
